syntax = "proto3";

option csharp_namespace = "GrpcCodeLearn.Server";

import "google/protobuf/timestamp.proto";

package chat;

service Chat {
  rpc SendMessage(stream ClientToServerMessage) returns (stream ServerToClientMessage);
}

message ClientToServerMessage {
  string message = 1;
}

message ServerToClientMessage {
  string message = 1;
  google.protobuf.Timestamp timestamp = 2;
}
